--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      # Adiciona permissão para a Action escrever no repositório
+      contents: write
     steps:
       - uses: Platane/snk@v3
         with:
-          # CORREÇÃO AQUI:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
             dist/github-contribution-grid-snake.svg
